--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.9.0",
     "autoprefixer": "^9.6.1",
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
